refactor: Support row movement as much as possible in the `ResultSetImpl` and throw the appropriate exception otherwise.
JavaDoc and spec recommends throwning `SQLException` when the result only supports forward scrolling and no concurrency isntead of SQLFeatureNotSupportedException.